# serializer version: 1
# name: test_sensor_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 131s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.air_purifier_131s_undefinedtype_singleton',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 131s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'filter_life',
      'unique_id': 'air-purifier-filter-life',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.air_purifier_131s_undefinedtype_singleton_2',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 131s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'air_quality',
      'unique_id': 'air-purifier-air-quality',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 131s][sensor.air_purifier_131s_air_quality]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 131s Air quality',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_131s_air_quality',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_state[Air Purifier 131s][sensor.air_purifier_131s_filter_lifetime]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 131s Filter lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_131s_filter_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_state[Air Purifier 131s][sensor.air_purifier_131s_undefinedtype_singleton]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 131s UndefinedType._singleton',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_131s_undefinedtype_singleton',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_state[Air Purifier 131s][sensor.air_purifier_131s_undefinedtype_singleton_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 131s UndefinedType._singleton',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_131s_undefinedtype_singleton_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.air_purifier_200s_undefinedtype_singleton',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 200s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'filter_life',
      'unique_id': 'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55-filter-life',
      'unit_of_measurement': '%',
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 200s][sensor.air_purifier_200s_filter_lifetime]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 200s Filter lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_200s_filter_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_state[Air Purifier 200s][sensor.air_purifier_200s_undefinedtype_singleton]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 200s UndefinedType._singleton',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_200s_undefinedtype_singleton',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 400s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.air_purifier_400s_undefinedtype_singleton',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 400s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'filter_life',
      'unique_id': '400s-purifier-filter-life',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.air_purifier_400s_undefinedtype_singleton_2',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 400s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'air_quality',
      'unique_id': '400s-purifier-air-quality',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.air_purifier_400s_pm2_5',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
      'original_icon': None,
      'original_name': 'Air Purifier 400s PM2.5',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '400s-purifier-pm25',
      'unit_of_measurement': 'µg/m³',
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 400s][sensor.air_purifier_400s_air_quality]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 400s Air quality',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_400s_air_quality',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_state[Air Purifier 400s][sensor.air_purifier_400s_filter_lifetime]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 400s Filter lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_400s_filter_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_state[Air Purifier 400s][sensor.air_purifier_400s_pm2_5]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Air Purifier 400s PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_400s_pm2_5',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensor_state[Air Purifier 400s][sensor.air_purifier_400s_undefinedtype_singleton]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 400s UndefinedType._singleton',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_400s_undefinedtype_singleton',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_state[Air Purifier 400s][sensor.air_purifier_400s_undefinedtype_singleton_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 400s UndefinedType._singleton',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_400s_undefinedtype_singleton_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 600s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.air_purifier_600s_undefinedtype_singleton',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 600s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'filter_life',
      'unique_id': '600s-purifier-filter-life',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.air_purifier_600s_undefinedtype_singleton_2',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Air Purifier 600s UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'air_quality',
      'unique_id': '600s-purifier-air-quality',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.air_purifier_600s_pm2_5',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
      'original_icon': None,
      'original_name': 'Air Purifier 600s PM2.5',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '600s-purifier-pm25',
      'unit_of_measurement': 'µg/m³',
    }),
  ])
# ---
# name: test_sensor_state[Air Purifier 600s][sensor.air_purifier_600s_air_quality]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 600s Air quality',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_600s_air_quality',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_state[Air Purifier 600s][sensor.air_purifier_600s_filter_lifetime]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 600s Filter lifetime',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_600s_filter_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_state[Air Purifier 600s][sensor.air_purifier_600s_pm2_5]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Air Purifier 600s PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_600s_pm2_5',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensor_state[Air Purifier 600s][sensor.air_purifier_600s_undefinedtype_singleton]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 600s UndefinedType._singleton',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_600s_undefinedtype_singleton',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_state[Air Purifier 600s][sensor.air_purifier_600s_undefinedtype_singleton_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air Purifier 600s UndefinedType._singleton',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.air_purifier_600s_undefinedtype_singleton_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'name': 'Dimmable Light',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Dimmable Light][entities]
  list([
  ])
# ---
# name: test_sensor_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Dimmer Switch][entities]
  list([
  ])
# ---
# name: test_sensor_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.humidifier_200s_humidity',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
      'original_icon': None,
      'original_name': 'Humidifier 200s humidity',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '200s-humidifier-humidity',
      'unit_of_measurement': '%',
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 200s][sensor.humidifier_200s_humidity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Humidifier 200s humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.humidifier_200s_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_sensor_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 600S][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.humidifier_600s_humidity',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
      'original_icon': None,
      'original_name': 'Humidifier 600S humidity',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '600s-humidifier-humidity',
      'unit_of_measurement': '%',
    }),
  ])
# ---
# name: test_sensor_state[Humidifier 600S][sensor.humidifier_600s_humidity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Humidifier 600S humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.humidifier_600s_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_sensor_state[Humidifier D301S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'd301s-humidifier',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'LUH-D301S-WEU',
      'name': 'Humidifier D301S',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Humidifier D301S][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.humidifier_d301s_humidity',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
      'original_icon': None,
      'original_name': 'Humidifier D301S humidity',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'd301s-humidifier-humidity',
      'unit_of_measurement': '%',
    }),
  ])
# ---
# name: test_sensor_state[Humidifier D301S][sensor.humidifier_d301s_humidity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Humidifier D301S humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.humidifier_d301s_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_sensor_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'name': 'Outlet',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Outlet][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.outlet_undefinedtype_singleton',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Outlet UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'current_power',
      'unique_id': 'outlet-power',
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.outlet_undefinedtype_singleton_2',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
      'original_icon': None,
      'original_name': 'Outlet UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'energy_today',
      'unique_id': 'outlet-energy',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.outlet_undefinedtype_singleton_3',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
      'original_icon': None,
      'original_name': 'Outlet UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'energy_week',
      'unique_id': 'outlet-energy-weekly',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.outlet_undefinedtype_singleton_4',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
      'original_icon': None,
      'original_name': 'Outlet UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'energy_month',
      'unique_id': 'outlet-energy-monthly',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.outlet_undefinedtype_singleton_5',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
      'original_icon': None,
      'original_name': 'Outlet UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'energy_year',
      'unique_id': 'outlet-energy-yearly',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.outlet_undefinedtype_singleton_6',
      'has_entity_name': False,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
      'original_icon': None,
      'original_name': 'Outlet UndefinedType._singleton',
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'current_voltage',
      'unique_id': 'outlet-voltage',
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
  ])
# ---
# name: test_sensor_state[Outlet][sensor.outlet_current_power]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Outlet Current power',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_current_power',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_current_voltage]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Outlet Current voltage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_current_voltage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '120.0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_energy_use_monthly]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet Energy use monthly',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_energy_use_monthly',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_energy_use_today]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet Energy use today',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_energy_use_today',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_energy_use_weekly]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet Energy use weekly',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_energy_use_weekly',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_energy_use_yearly]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet Energy use yearly',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_energy_use_yearly',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_undefinedtype_singleton]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Outlet UndefinedType._singleton',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_undefinedtype_singleton',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_undefinedtype_singleton_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet UndefinedType._singleton',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_undefinedtype_singleton_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_undefinedtype_singleton_3]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet UndefinedType._singleton',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_undefinedtype_singleton_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_undefinedtype_singleton_4]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet UndefinedType._singleton',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_undefinedtype_singleton_4',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_undefinedtype_singleton_5]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Outlet UndefinedType._singleton',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_undefinedtype_singleton_5',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_state[Outlet][sensor.outlet_undefinedtype_singleton_6]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Outlet UndefinedType._singleton',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outlet_undefinedtype_singleton_6',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '120.0',
  })
# ---
# name: test_sensor_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'name': 'Temperature Light',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Temperature Light][entities]
  list([
  ])
# ---
# name: test_sensor_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'is_new': False,
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'name': 'Wall Switch',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensor_state[Wall Switch][entities]
  list([
  ])
# ---
